[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/EnemiesInheritance/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/WalkingEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 7 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3, 1 )

[node name="WalkingEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
position = Vector2( 0, -7 )

[node name="Stats" parent="." index="2"]
maxHealth = 3

[node name="Hurtbox" parent="." index="3"]
position = Vector2( 0, -7 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." index="4"]
position = Vector2( 0, -7 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="FloorDetectorLeft" type="RayCast2D" parent="." index="5"]
position = Vector2( -2, -1 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="FloorDetectorRight" type="RayCast2D" parent="." index="6"]
position = Vector2( 2, -1 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="SlopeDetectorLeft" type="RayCast2D" parent="." index="7"]
position = Vector2( -2, -1 )
enabled = true
cast_to = Vector2( -2, 0 )

[node name="SlopeDetectorRight" type="RayCast2D" parent="." index="8"]
position = Vector2( 2, -1 )
enabled = true
cast_to = Vector2( 2, 0 )

[node name="WallDetectorLeft" type="RayCast2D" parent="." index="9"]
position = Vector2( -1, -5 )
enabled = true
cast_to = Vector2( -2, 0 )

[node name="WallDetectorRight" type="RayCast2D" parent="." index="10"]
position = Vector2( 1, -5 )
enabled = true
cast_to = Vector2( 2, 0 )

[node name="SlopeDetector" type="Area2D" parent="." index="11"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlopeDetector" index="0"]
position = Vector2( 0, -1.30551 )
shape = SubResource( 4 )

[editable path="Hurtbox"]
[editable path="Hitbox"]
